bsdgames-nonfree (2.17-5) UNRELEASED; urgency=low

  * NOT RELEASED YET.
  * rogue/init.c: Give the initial bow a damage value of 1d1 for
    consistency with object.c; 1d2 was presumably a typo.

 -- Aaron M. Ucko <ucko@debian.org>  Thu, 06 Dec 2012 21:43:21 -0500

bsdgames-nonfree (2.17-4) unstable; urgency=low

  * config.params: defer to debian/rules for build flags (which weren't
    set quite as intended in noopt mode anyway, per a longstanding typo).
  * debian/compat: Advance to Debhelper 9.
  * debian/control:
    - Build-Depends: debhelper (>= 9), implying a new enough dpkg-dev.
    - Depends: ${misc:Depends}, which debhelper could theoretically populate.
    - Vcs-*: point to (new) personal repository on anonscm.debian.org.
    - Retire conflict against ancient (pre-split) bsdgames.
    - Standards-Version: 3.9.3 (now compliant).
  * debian/copyright: clean up and convert to DEP5 format 1.0.
  * debian/rules:
    - Minimize further by switching to override_dh_* style.
    - Pass in dpkg's recommended flags, including full hardening flags.
  * (debian/).gitignore: ignore generated files.

 -- Aaron M. Ucko <ucko@debian.org>  Wed, 27 Jun 2012 21:43:37 -0400

bsdgames-nonfree (2.17-3) unstable; urgency=low

  * Migrate from CDBS to Debhelper 7.
  * Explicitly note distinction between main and non-free in debian/copyright.
  * Declare compliance with Policy 3.8.0.

 -- Aaron M. Ucko <ucko@debian.org>  Sat, 14 Jun 2008 18:10:04 -0400

bsdgames-nonfree (2.17-2) unstable; urgency=low

  * Convert to cdbs and debhelper 6.
  * Note compliance with current policy (3.7.3).
  * Set XS-Autobuild: yes, as the license isn't too severely non-free.

 -- Aaron M. Ucko <ucko@debian.org>  Sat, 29 Mar 2008 19:51:53 -0400

bsdgames-nonfree (2.17-1) unstable; urgency=low

  * New upstream release.
  * debian/menu: Properly double-quote command.
  * debian/watch: Added, to help track future upstream versions.

 -- Aaron M. Ucko <ucko@debian.org>  Fri, 18 Feb 2005 22:09:47 -0500