@@ -263,6 +263,10 @@ read_pack(pack, fp, is_rogue)
 		}
 		new_obj = alloc_object();
 		*new_obj = read_obj;
+		/* new_obj->damage is a pointer, and not guaranteed to be valid
+		 * across runs with slightly different binaries, or even the
+		 * same binary if built as a position-independent executable. */
+		assign_damage(new_obj);
 		if (is_rogue) {
 			if (new_obj->in_use_flags & BEING_WORN) {
 				do_wear(new_obj);
