@@ -3,8 +3,14 @@ bsdgames-nonfree (2.17-5) UNRELEASED; urgency=low
   * NOT RELEASED YET.
   * rogue/init.c: Give the initial bow a damage value of 1d1 for
     consistency with object.c; 1d2 was presumably a typo.
+  * rogue/{object.c,rogue.h,save.c}: factor an assign_damage function out
+    of gr_weapon, and call it from read_pack because saved values (raw
+    pointers to string constants) may be invalid.  (The setup was always
+    fragile, and broke altogether when 2.17-4 made the executable
+    position-independent and subject to loading at randomized addresses.)
+    (Closes: #695262.)
 
- -- Aaron M. Ucko <ucko@debian.org>  Thu, 06 Dec 2012 21:43:21 -0500
+ -- Aaron M. Ucko <ucko@debian.org>  Thu, 06 Dec 2012 21:51:28 -0500
 
 bsdgames-nonfree (2.17-4) unstable; urgency=low
 
